Display correct font preview in settings, fix timer not changing on mobile

--- a/pomodorotimer/assets/css/_reset.scss
+++ b/pomodorotimer/assets/css/_reset.scss
@@ -127,3 +127,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+button {
+  border: none;
+  background-color: transparent;
+}
